# Projects

./: .gitignore  README.md
CPP/ModelLoaderRevised/: Camera.cpp  Makefile  README.txt  main.cpp  modelBasic.cpp  modelLoader.cpp  perlin.cpp  teapot.sublime-workspace  tessModel.cpp  texModel.cpp
CPP/multithreading/: Makefile  main.cpp
ICPC_Practice/: acm.py  asciiadd.py  bst.cpp  faktor.py  hax.py  magic.py  mirror.py  oop.py  quadrant_select.py
Ruby/: blep.rb  sftp.rb
TSP/: TSP.cu  tsp
WebGL/: durr.html  hurr.js  wurr.css
durr/: client.py  server.py
golf/: README.md  ascii.rb  barcode.py  barcode_test.py  derp.py  hat.py  html_parse.rb  semihash.py  stack_exchange_icon.py  stack_exchange_icon.rb  staircase.py  staircase.rb  test_parse.html
img_scale/: img_scale.py  pngtest.cpp  scale_png.go
img_scale/cpp/: Makefile  main.cpp
img_scale/golang/: scale_png.go
light_switch/: blep.py  cfg.yaml  main.py  requirements.txt
light_switch/templates/: common.html  index.html
puzzle challenge/: color_coded.rb  hopskotch.py  mastermind.py  numbers.py  trap.rb  trap_codes.txt
puzzle_challenge/: binery.py  color_coded.rb  color_coded.txt  flowerGarden.py  max_seq.py  ranklist_sorting.py  trap.txt
puzzles_2018/: cee.py  text
python/: blep.py  cv_sandbox.py  delicious.txt  repulsion.py
sandbox/: islands.py  islands2.py  pair.cpp  static_parent.cpp  unroll.cpp  vec.cpp
sequence_gen/: Cargo.toml
sequence_gen/src/: main.rs
smart_mirror/: face_detection.py  weather_test.py
templates/: Makefile.mak  c.cpp  python.py
vpython/: gravity.py
(+42 files in other folders)
